# WebCore

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CONVENTIONS.md  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  README.rst  README.textile  Rakefile  distribute_setup.py  setup.cfg  setup.py  test.html  tox-dist.ini  tox.ini  virtualenv_bootstrap.py
.travis/: install.sh  run.sh
bench/: ptest.py  ttest.py
cmf/: NOTES  externals  setup.py
cmf/cmf/: api.py  core.py  hooks.py  release.py  util.py
cmf/cmf/components/: core.py
cmf/cmf/extensions/: guestpass.py
cmf/components/authentication/: setup.py
cmf/components/blogging/: setup.py
cmf/components/knowledge/: setup.py
cmf/components/search/: README
cmf/components/xtn-analytics-google/: LICENSE  README  setup.py
cmf/components/xtn-breadcrumb/: MANIFEST.in  README  setup.py
cmf/components/xtn-navigation-tagged/: README  setup.py
cmf/components/xtn-timeago/: README  setup.py
cmf/docs/: Asset Basic Properties  Asset Embedding  Call Flow  Naming Restrictions  Performance Statistics  TuneCore Application Rewrite  TurboCMF Presentation.key  fix-nested-set.py
cmf/docs/CMF Inheritance.mindnode/: contents.xml
cmf/docs/CMF Structure.mindnode/: contents.xml
cmf/docs/Components/: Automatic Header Replacement
cmf/tests/: test_utils.py
docs/: Makefile  flow.textile  index.html  make.bat
docs/app/: __init__.html  static.html
docs/core/: __init__.html  application.html  compat.html  context.html  dispatch.html  extension.html  release.html  util.html  view.html
docs/example/: annotation.html  basic.html  controller.html  debugger.html  exception.html  extension.html  hello.html  stream.html  stream2.html  template.html
docs/ext/: __init__.html  analytics.html  annotation.html  base.html  debug.html  local.html
docs/old/: flow.textile
docs/recipes/: extend_template_namespace.py  middleware.py  response_registry.py
docs/server/: appengine.html  cherrypy_.html  diesel_.html  dycco.css  eventlet_.html  fcgi.html  gevent_.html  stdlib.html  tornado_.html  waitress_.html  wsgiref_.html
docs/source/: conf.py  index.rst  todo.rst
docs/source/api/: index.rst
docs/source/core/: GettingYAPWF.rst  NewProject.rst  installation.rst
example/: _examples.md  _examples.paw  annotation.py  basic.md  basic.py  controller.py  controller.yaml  debugger.py  exception.py  extension.py  hello.py  methods.py  monster.py  stream.py  stream2.py  template.html  template.py  testapi.py  traverse.py
example/future/: restful.py  wsgi2.py
examples/: annotation.py  basic.py  controller.py  controller.yaml  hello.py  methods.py  monster.py  multihead.py  nothingbut.yaml  restful.py  routing.py  template.html  template.py  url.py
examples/YAPWF-Examples/: hello.ini  setup.py
examples/example-combined/: application.py
examples/example-i18n/: sample.ini  setup.cfg  setup.py
examples/example-paste-deploy/: redirects.ini  sample.ini  setup.py
examples/example-simple/: sample.py
examples/example-templating/: sample.py
examples/example-xmlrpc/: application.py
examples/i18n/: sample.ini  setup.py
examples/package/: redirects.ini  sample.ini  setup.py
examples/rpc/: amf_client.py  amf_server.py  combined_client.py  combined_server.py  jsonrpc_client.py  jsonrpc_server.py  xmlrpc_client.py  xmlrpc_server.py
examples/simple/: rest.py  sample.py
examples/static/: main.py
examples/templating/: sample.py
examples/wiki/: development.db  sample.ini  setup.py
scripts/: virtualenv_bootstrap.py
test/: crudlike.py  sample.py  test_crudlike.py  test_object_dispatch.py
test/test_app/: test_static.py
test/test_core/: test_application.py  test_context.py  test_dispatch.py  test_response.py  test_util.py  test_views.py
test/test_extension/: test_acl.py  test_analytics.py  test_annotation.py  test_args.py  test_base.py  test_debug.py  test_defer.py  test_handler.py  test_local.py
test/test_extensions/: test_analytics.py  test_annotation.py  test_args.py  test_authentication.py  test_debug.py  test_local.py  test_sqlalchemy.py
test/test_issue/: scaffold.py  test_160.py  test_161.py
tests/: __init__.py  common.py  test_auth.py  test_basic.py  test_crud.py  test_db_mongo.py  test_db_sa.py  test_locale.py  test_middleware.py  test_rest.py  test_routes.py  test_rpc_amf.py  test_rpc_extdirect.py  test_rpc_json.py  test_rpc_routing.py  test_rpc_xml.py  test_templating.py  test_url.py  test_utils.py
tests/locale/: messages.pot
tests/templates/: registry.html  relativetest.html  unicode.html  unicode_mako.html  variables.html
tests/test_core/: test_application.py  test_response.py  test_tarjan.py
tests/test_extensions/: test_authentication.py  test_mongodb.py  test_redis.py  test_sqlalchemy.py
web/: __init__.py  release.py  shell.py
web/app/: echo.py  static.py
web/auth/: __init__.py  authkit.py  middleware.py  predicates.py
web/cli/: clean.py  collect.py  compile.py  core.py  shell.py  versions.py
web/commands/: shell.py
web/core/: __init__.py  application.py  auth.py  compat.py  context.py  debug.py  dialects.py  dispatch.py  extension.py  i18n.py  locale.py  middleware.py  pretty.py  release.py  response.py  rid.py  tarjan.py  templating.py  testing.py  typing.py  util.py  view.py
web/db/: __init__.py  api.py  me.py  mongo.py  sa.py
web/dialect/: dispatch.py  helper.py  resource.py  route.py  traversal.py
web/ext/: acl.py  analytics.py  annotation.py  api.py  args.py  assets.py  asynchronous.py  base.py  db.py  debug.py  defer.py  example.py  extmime.py  handler.py  local.py  serialize.py  tablib.py  template.py  transaction.py
web/extras/: __init__.py  bencode.py  cprofile.py  templating.py  twframework.py
web/rpc/: __init__.py  amf.py  extdirect.py  jsonrpc.py  xml.py
web/server/: appengine.py  automatic.py  cherrypy_.py  diesel_.py  eventlet_.py  fcgi.py  gevent_.py  stdlib.py  tornado_.py  waitress_.py  wsgiref_.py
web/utils/: __init__.py  attributed.py  decorator.py  dictionary.py  distrib.py  object.py  string.py  url.py
yapwf/: release.py
(+224 files in other folders)
