[metadata]

name = WebCore
description = A powerful web development nanoframework so small it's not even a microframework.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
author = Alice Bevan-McGregor
author_email = a+WebCore@gothcandy.com
url = https://github.com/marrow/WebCore

project_urls =
	Source Code = https://github.com/marrow/WebCore
	Downloads = https://github.com/marrow/WebCore/releases
	Documentation = https://github.com/marrow/WebCore/wiki
	Issue Tracker = https://github.com/marrow/WebCore/issues
	Funding = https://github.com/sponsors/amcgregor

keywords =
	marrow
	wsgi
	web.core
	web.ext
	mvc
	web framework
	webapp
	microframework
	nanoframework
	rest

classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
	Topic :: Internet :: WWW/HTTP :: WSGI
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Application Frameworks
	Topic :: Software Development :: Libraries :: Python Modules


[options]

packages =
	web.app
	web.core
	web.ext
	web.server

include_package_data = True
python_requires = >=3.8
zip_safe = False

setup_requires =
	setuptools-scm >= 1.7.0

install_requires =
	futures; python_version < "3.4"
	typeguard ~= 2.3.0, < 4.0
	marrow.package ~= 2.0.1, < 3.0
	web.dispatch ~= 3.0.1, < 4.0
	WebOb

tests_require =
	pytest
	pytest-cov
	pytest-flakes
	pytest-isort
	pytest-runner
	web.dispatch.object
	backlash


[options.entry_points]

web.app =
	static = web.app.static:static

web.acl.predicate =
	not = web.ext.acl:Not
	always = web.ext.acl:always
	never = web.ext.acl:never
	first = web.ext.acl:First
	all = web.ext.acl:all
	any = web.ext.acl:any
	matches = web.ext.acl:ContextMatch
	contains = web.ext.acl:ContextContains

web.extension =
	base = web.ext.base:BaseExtension
	request = web.ext.base:BaseExtension
	response = web.ext.base:BaseExtension
	
	analytics = web.ext.analytics:AnalyticsExtension
	timing.prefix = web.ext.analytics:TimingPrefix
	timing.suffix = web.ext.analytics:TimingExtension
	timing = web.ext.analytics:TimingExtension
	
	annotation = web.ext.annotation:AnnotationExtension
	cast = web.ext.annotation:AnnotationExtension
	typecast = web.ext.annotation:AnnotationExtension
	
	args.validation = web.ext.args:ValidateArgumentsExtension
	kwargs.validation = web.ext.args:ValidateArgumentsExtension
	
	args.context = web.ext.args:ContextArgsExtension
	
	args = web.ext.args:RemainderArgsExtension
	args.remainder = web.ext.args:RemainderArgsExtension
	
	kwargs = web.ext.args:QueryStringArgsExtension
	kwargs.qs = web.ext.args:QueryStringArgsExtension
	
	args.elision = web.ext.args:StripArgumentsExtension
	kwargs.elision = web.ext.args:StripArgumentsExtension
	
	kwargs.form = web.ext.args:FormEncodedKwargsExtension
	kwargs.json = web.ext.args:JSONKwargsExtension
	
	debugger = web.ext.debug:DebugExtension
	console = web.ext.debug:DebugExtension
	
	request.accept = web.ext.extmime:AcceptFilenameExtension
	
	local = web.ext.local:ThreadLocalExtension
	
	serialization = web.ext.serialize:SerializationExtension
	
	defer = web.ext.defer:DeferralExtension

web.server =
	wsgiref = web.server.stdlib:simple
	cgiref = web.server.stdlib:cgi
	iiscgiref = web.server.stdlib:iiscgi
	
	waitress = web.server.waitress_:serve[waitress]
	tornado = web.server.tornado_:serve[tornado]
	fcgi = web.server.fcgi:serve[flup]
	appengine = web.server.appengine:serve
	eventlet = web.server.eventlet_:serve[eventlet]
	gevent = web.server.gevent_:serve[gevent]
	diesel = web.server.diesel_:serve[diesel]
	bjoern = web.server.bjoern_:serve[bjoern]

web.serialize =
	json = web.ext.serialize:json.dumps
	application/json = web.ext.serialize:json.dumps
	yaml = yaml:dumps[yaml]
	application/x-yaml = yaml:dumps[yaml]

web.deserialize =
	json = web.ext.serialize:json.loads
	application/json = web.ext.serialize:json.loads
	yaml = yaml:loads[yaml]
	application/x-yaml = yaml:loads[yaml]
	
	# These are handled by the base extension as core functionality, to make use of WebOb caching.
	application/x-www-form-urlencoded = web.ext.base:nop
	multipart/form-data = web.ext.base:nop


[options.extras_require]

development =
	pytest  # Test runner.
	pytest-cov  # Validate test coverage.
	pytest-flakes  # Validate syntax and style.
	pytest-isort  # Validate import ordering.
	pytest-runner  # setup.py support for pytest test execution.
	web.dispatch.object  # Default dispatch style.
	backlash  # An interactive web-based debugger.  See also: wdb
	ptipython  # Improved interactive REPL shell, combining ipython and ptpython.
	pudb  # Interactive step-debugger, with a Borland aesthetic.
	waitress  # Threaded development-time web server.
	e  # Useful utility to quickly evaluate expressions or retrieve importable module paths.

# Dispatch Mechanisms
object = web.dispatch.object
route = web.dispatch.route
rest = web.dispatch.resource
resource = web.dispatch.resource
traversal = web.dispatch.traversal

# General Extras
cli = web.command  # Command-line interface.
template = cinje  # Recommended template engine.
database = web.db  # Recommended database engine.
asset = webassets  # Recommended static asset management.
bson = pymongo  # BSON and MongoDB-Extended JSON serialization support.
yaml = pyyaml  # YAML serialization support.

# Plugin Dependencies
bjoern = bjoern
eventlet = eventlet
flup = flup
gevent = gevent
tornado = tornado
waitress = waitress


[options.package_data]

* = *.txt, *.md


[aliases]

test = pytest


[check]

metadata = 1


[clean]

build-base = .packaging/build
bdist-base = .packaging/dist


[build]

build-base = .packaging/build


[install]

optimize = 1


[bdist]

bdist-base = .packaging/dist
dist-dir = .packaging/release


[bdist_egg]

bdist-dir = .packaging/dist
dist-dir = .packaging/release


[bdist_wheel]

bdist-dir = .packaging/dist
dist-dir = .packaging/release


[wheel]

universal = 0


[tool:pytest]

addopts =
	-l -r fEsxw
	--flakes
	--cov-report term-missing
	--cov-report xml
	--no-cov-on-fail
	--cov web
	--durations=5
	--color=yes
	test
